--- a/css/style.css
+++ b/css/style.css
@@ -100,12 +100,29 @@
     color: var(--top-color);
     display: block;
     }
+    .header-link {
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
     .header-link:hover,
     .header-link:focus {
         color: dodgerblue;
     }
     .header-list .link.current {
         color: dodgerblue;
+    }
+    .header-navigation .current {
+        position: relative;
+    }
+    
+    .current:after{
+        content: '';
+        position: absolute;
+        bottom: -8.5px;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background: #2196F3;
+        border-radius: 2px;
     }
      
     .header-tel {
@@ -121,7 +138,9 @@
   padding-bottom: 25px;
             
     }
-    
+    .header-tel{
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
     
     
 
@@ -137,6 +156,9 @@
         padding-top: 24px;
             padding-bottom: 25px;
             display: block;
+    }
+    .header-mail{
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .header-tel:hover ,
     .header-tel:focus,
@@ -191,7 +213,8 @@
     display: block;
     margin: 0 auto;
     background-color: dodgerblue;
-    max-width: 216px;
+    width: 216px;
+    height: 50px;
     border-color: transparent;
     border-radius: 4px;
     }
@@ -298,6 +321,10 @@
                 display: flex;
                 justify-content: center;
                 gap: 10px;}
+            .about-soc-link{
+                transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            }    
 
             .about-soc-link:hover,
             .about-soc-link:focus {
@@ -383,11 +410,17 @@
         display: flex;
         justify-content: center;
         gap: 10px;}
+        .client-soc-link {
+        transition:border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
 
     .client-soc-link:hover,
     .client-soc-link:focus {
       background-color: #fff;
       border-color: #2196F3;
+}
+.client-soc-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
     .client-soc-link:hover .client-soc-icon,
     .client-soc-link:focus .client-soc-icon {
@@ -456,10 +489,12 @@
     .footer-tel:hover{
         color: dodgerblue;
     }
-    /* .container-footer {
-        display: flex;
-        margin: 0;
-        gap: 70px; */
+   .footer-mail {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   }
+   .footer-tel {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   }
     .footer-contact-container {
         display: flex;
         gap: 70px;
@@ -500,6 +535,9 @@
                 display: flex;
                 justify-content: center;
                 gap: 10px;}
+            .footer-soc-link {
+             transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            }
 
             .footer-soc-link:hover,
             .footer-soc-link:focus {
@@ -550,12 +588,74 @@ padding: 6px 22px;
     .button-everyone {
         padding: 6px 25px;
     }
+    .portfolio-button{
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
     .portfolio-button:hover,
     .portfolio-button:focus{
         color: var(--hit-color);
         background-color: #2196F3;
     }
-    /*------------ Портфоліо---------------- */
+    /*------------ Портфоліо---------------- */  
+    /*------------ Модальне вікно---------------- */ 
+     .backdrop {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.2);
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) ,
+visibility 250ms cubic-bezier(0.4, 0, 0.2, 1),
+transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+     }
+     .modal {
+        width: 528px;
+        min-height: 581px;
+        background: #FFFFFF;
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50% , -50%) scale(1);
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) ,
+visibility 250ms cubic-bezier(0.4, 0, 0.2, 1),
+transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+     }
+     
+     .backdrop.is-hidden .modal {
+        transform: translate(50%, 50%) scale(0);
+     }
+     .modal-btn {
+        width: 30px;
+        height: 30px;
+        background: #FFFFFF;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        background-color: transparent;
+        position: absolute;
+        top: 8px;
+        right: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        cursor: pointer;
+     }
+     .modal-close-icon {
+        width: 11px;
+        height: 11px;
+     }
+     .is-hidden {
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+     }
+
+    /*------------ Модальне вікно---------------- */ 
     /*------------ Проекти---------------- */
     .project-list {
         display: flex;
@@ -567,11 +667,44 @@ padding: 6px 22px;
         width: calc((100% - 60px) / 3);
         border: 1px solid #EEEEEE;
     }
+    .project-iten {
+     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
     .project-iten:hover,
     .project-iten:focus{
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
         0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+    .project-iten:hover .project-top-text {
+        transform: translateY(0%);
+        
+        
+    }
+    .project-top-text {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: rgba(33, 150, 243, 0.9);
+        height: 100%;
+        width: 100%;
+        padding-top: 63px;
+        padding-bottom: 63px;
+        padding-left: 24px;
+        padding-right: 24px;
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .project-top {
+        position: relative;
+        font-weight: 400;
+        font-size: 18px;        
+        line-height: 1.56;
+        letter-spacing: 0.03em;
+        color: #FFFFFF;
+        overflow: hidden;
+        
+
     }
     
     .project-description {
